# HermesLearnsManim

./: .env.example  .gitignore  LICENSE  PROMPTS.md  README.md  pyproject.toml  requirements.txt
docs/: source-pipeline-review.md
hermes/skills/hermes-learns-manim/: SKILL.md
hermes/skills/hermes-learns-manim/references/: mcp-config.yaml  subagents.md
sandbox/: artemis_ii_lunar_flyby.py  brownian_to_bs.py  geodesic.py
sandbox/media/Tex/: 0b3e1d01312f5ecd.tex  18fd4b97c77b2570.tex  241b5805730acced.tex  25985c6c23a67e17.tex  33a871063764bb7d.tex  38e074267b5d1605.tex  6621ee9138929cca.tex  7db754cd650a8ddc.tex  7f43983c4062dee8.tex  9a36712d8631f757.tex  a18b2613be98a9b9.tex  a80a53ab1703b723.tex  a92946a86963a235.tex  b4c614ec64aaaa4f.tex  baebb5243505a988.tex  bbb9ac802dc3881d.tex  bd0e0b366af306d1.tex  cfa995bbf476bc3c.tex  e0bc13edd9a27670.tex  e343c41e25731e97.tex
sandbox/media/videos/brownian_to_bs/480p15/partial_movie_files/BrownianToBlackScholes/: partial_movie_file_list.txt
sandbox/media/videos/geodesic/480p15/partial_movie_files/GeodesicEquation/: partial_movie_file_list.txt
src/hermes_learns_manim/: __init__.py  cli.py  config.py  io.py  mcp_server.py  models.py  pipeline.py  prompts.py  renderer.py  tools.py
tests/: test_mcp_server.py  test_models.py  test_pipeline.py  test_tools.py
