[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-learns-manim"
version = "0.1.0"
description = "A Hermes-ready OpenAI Agents SDK pipeline for generating Manim animations from recursive concept decomposition."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Harley Coops" }
]
dependencies = [
  "openai-agents>=0.3.0",
  "manim>=0.19.0",
  "mcp>=1.13.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[project.scripts]
hermes-learns-manim = "hermes_learns_manim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
